--- a/back-rest/package.json
+++ b/back-rest/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "sequelize": "^4.36.0",
+    "sequelize": ">=5.3.0",
     "sqlite3": "^3.1.13"
   }
 }
